# diadataalpha

./: .env.example  .gitignore  ANALYSIS.md  HANDOFF.md  README.md  dashboard.py  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
config/: competitors.yaml  feeds.yaml  grants.yaml  news.yaml  news_feeds.yaml  oracle_tvs.yaml  oracles.yaml  protocols.yaml  staking_snapshots.yaml
dia_alpha_monitor/: __init__.py  __main__.py  alerts.py  cli.py  coingecko.py  config_loader.py  db.py  defillama.py  defillama_pro.py  dia_api.py  evm_oracle.py  feed_activity.py  grants.py  http_client.py  lasernet.py  models.py  reporting.py  rss_ingest.py  scoring.py  valuation.py
exports/: .gitkeep
tests/: test_pipeline.py  test_scoring.py  test_valuation.py
