[project]
name = "dia-alpha-monitor"
version = "0.1.0"
description = "Local investor research tool to detect early alpha signals for DIA Data / DIA Oracles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dia-alpha-monitor" }]
dependencies = [
    "pandas>=2.1",
    "httpx>=0.27",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.34"]
dev = ["pytest>=8.0"]

[project.scripts]
dia-alpha-monitor = "dia_alpha_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dia_alpha_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
